# factcheckenv

./: .gitignore  Dockerfile  README.md  baseline.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
data/: dataset.json
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
