[project]
name = "factcheckenv"
version = "0.1.0"
description = "OpenEnv environment for grounded QA and fact verification"
authors = [
    { name = "Saurabh Jaurat" }
]
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"